--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,3 +68,6 @@ select = [
     "T201", # Print Statement
 ]
 ignore = ["E501", "PLR0913", "PLR2004"]  # Ruff format takes care of line-too-long
+
+[tool.kedro_telemetry]
+project_id = "2dec6ee2bf9a4f43b5ac4ac8c944bde2"
